# Parser

./: .gitignore  input  loging_config.py  main.py  pyproject.toml  requirements.txt  settings.py
models/: news.py
parser/: create_content.py  rbc_parser.py
