[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Taushicki <ipanteleev193@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
environs = "^11.0.0"
aiohttp = "^3.9.3"
pydantic = "^2.6.4"
apikit = {path = "../apikit", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
